--- a/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
+++ b/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
@@ -8,7 +8,7 @@ services:
 
   db:
     volumes:
-      #- ./pg/postgres_data:/var/lib/postgresql
+      - ./pg/postgres_data:/var/lib/postgresql
       - ./backups:/backups
       - ./sql:/sql
 
