--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -72,13 +72,13 @@
     </script>
 
     <script type="text/html" id="map-search-container">
-        <div class="map-search-box">
+        <div class="map-search-box map-control-panel-box">
             <div class="row">
                 <div class="col-lg-12" style="padding-right: 0">
-                    <span class="map-search-title">
+                    <span class="title">
                         SEARCH
                     </span>
-                    <div class="map-search-close pull-right">
+                    <div class="close-button map-search-close pull-right">
                         X
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="row sub-filter">
-                <div class="col-lg-12 map-filter-subtitle">
+                <div class="col-lg-12 subtitle">
                     DATE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="row sub-filter">
-                <div class="col-lg-12 map-filter-subtitle">
+                <div class="col-lg-12 subtitle">
                     COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="row sub-filter">
-                <div class="col-lg-12 map-filter-subtitle">
+                <div class="col-lg-12 subtitle">
                     CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
@@ -149,6 +149,24 @@
         <div class="zoom-control row">
             <div class="col-lg-6 sub-zoom-control zoom-out"><i class="fa fa-plus" aria-hidden="true"></i></div>
             <div class="col-lg-6 sub-zoom-control zoom-in"><i class="fa fa-minus" aria-hidden="true"></i></div>
+        </div>
+
+        {# layers selector container #}
+        <div class="layers-selector-container map-control-panel-box">
+            <div class="row">
+                <div class="col-lg-12" style="padding-right: 0">
+                    <span class="title">
+                        LAYERS SELECTOR
+                    </span>
+                    <div class="layers-selector-container-close close-button pull-right">
+                        X
+                    </div>
+                </div>
+            </div>
+            <div class="row content">
+                <table id="layers-selector" style="width:100%">
+                </table>
+            </div>
         </div>
     </script>
 
