--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -164,8 +164,8 @@
                 </div>
             </div>
             <div class="row content">
-                <table id="layers-selector" style="width:100%">
-                </table>
+                <ul id="layers-selector" style="width:100%">
+                </ul>
             </div>
         </div>
     </script>
