add geocontext handler

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -116,7 +116,7 @@ html, body, .map, .map-wrapper, #map-container {
     background-color: white;
     position: absolute;
     left: 0;
-    top: 162px;
+    top: 139px;
     transform: translateY(-50%);
     padding-left: 6px;
     padding-right: 6px;
@@ -464,7 +464,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 .layer-switcher {
     position: absolute;
-    top: 258px !important;
+    top: 198px !important;
     left: 0;
     right: auto !important;
     text-align: left;
@@ -690,4 +690,26 @@ div:hover::-webkit-scrollbar {
 
 #popup tr td:first-child {
     font-weight: 700;
+}
+
+#geocontext-information-container {
+    padding: 10px;
+    display: none;
+}
+
+#geocontext-information-container table {
+    width: 100%;
+}
+
+#geocontext-information-container td {
+    border: 1px solid grey;
+    padding: 3px;
+    font-size: 8pt;
+}
+
+#geocontext-information-container img {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    border: 1px solid gray;
 }
