Get center map coordinate from environment variable

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -19,6 +19,7 @@
         const staticURL = "{% static "" %}";
         const geocontextUrl = '{{ geocontext_url }}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
+        const centerPointMap = '{{ center_point_map }}';
     </script>
 {% endblock %}
 
