show common name as title on the record popup detail

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -192,7 +192,8 @@
 
     <script type="text/template" id="record-detail-template">
         <div>
-            <table>
+            <h4><%= taxonomy.common_name %></h4>
+            <table style="width: 100%">
                 <tr>
                     <td>Kingdom</td>
                     <td><%= taxonomy.kingdom %></td>
