remove non existent js

--- a/bims/templates/td_biblio/entry_list.html
+++ b/bims/templates/td_biblio/entry_list.html
@@ -18,6 +18,7 @@
     <!-- Milligram CSS minified -->
     <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
     <!-- Override styles -->
+    <link href="{% static "css/navbar.css" %}" rel="stylesheet">
     <style>
              body {
                    margin-top: 8%;
