--- a/bims/templates/td_biblio/entry_import.html
+++ b/bims/templates/td_biblio/entry_import.html
@@ -20,6 +20,7 @@
 
 
     </style>
+    <link href="{% static "css/navbar.css" %}" rel="stylesheet">
 
     <h2>{% trans "Import new publications" %}</h2>
 <form
