--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -36,10 +36,10 @@
                         </div>
                         <li><a class="nav-link js-scroll-trigger" href="/">HOME</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/map">MAP</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="{% url 'link_list' %}">EXTERNAL RESOURCES</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/under-development/">DOCUMENTS & REPORTS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/contact/">CONTACT</a></li>
-                        <li><a class="nav-link js-scroll-trigger"href="/bibliography/">BIBLIOGRAPHY</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">EXTERNAL RESOURCES</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
                         <div class="bims-nav-footer row">
                             <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY KARTOZA</div>
                         </div>
@@ -61,9 +61,9 @@
                         <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION SYSTEM</div>
                     </div>
                      {% if user.is_authenticated %}
-                        <li><a class="nav-link js-scroll-trigger" href="/profile/">PROFILE</a></li>
-                         <li><a class="nav-link js-scroll-trigger" href="/under-development/">CONTRIBUTIONS</a></li>
-                         <li><a class="nav-link js-scroll-trigger" href="/upload/">UPLOAD FILES</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
+                         <li><a class="nav-link js-scroll-trigger" id="navbar-contributions" href="/under-development/">CONTRIBUTIONS</a></li>
+                         <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/upload/">UPLOAD FILES</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
                      {% else %}
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a></li>
@@ -102,6 +102,49 @@
                     dropdownMenu[j].classList.remove("show");
                 }
             }
+        }
+
+        var uploadUrl = '{{ upload_url }}';
+        var extResourceUrl = '{{ ext_resource_url }}';
+        var docReportUrl = '{{ doc_report_url }}';
+        var contactUrl = '{{ contact_url }}';
+        var biblioUrl = '{{ biblio_url }}';
+        var profileUrl = '{{ profile_url }}';
+        var contributionsUrl = '{{ contributions_url }}';
+
+        if(uploadUrl !== 'None'){
+            var navbarUpload = document.getElementById("navbar-upload");
+            navbarUpload.href = uploadUrl;
+        }
+
+        if(extResourceUrl !== 'None'){
+            var navbarExt = document.getElementById("navbar-ext-resources");
+            navbarExt.href = extResourceUrl;
+        }
+
+        if(docReportUrl !== 'None'){
+            var navbarDoc = document.getElementById("navbar-doc-report");
+            navbarDoc.href = docReportUrl;
+        }
+
+        if(contactUrl !== 'None'){
+            var navbarContact = document.getElementById("navbar-contact");
+            navbarContact.href = contactUrl;
+        }
+
+        if(biblioUrl !== 'None'){
+            var navbarBiblio = document.getElementById("navbar-biblio");
+            navbarBiblio.href = biblioUrl;
+        }
+
+        if(profileUrl !== 'None'){
+            var navbarProfile = document.getElementById("navbar-profile");
+            navbarProfile.href = profileUrl;
+        }
+
+        if(contributionsUrl !== 'None'){
+            var navbarContributions = document.getElementById("navbar-contributions");
+            navbarContributions.href = contributionsUrl;
         }
 
     </script>
