--- a/bims/templates/csv_uploader.html
+++ b/bims/templates/csv_uploader.html
@@ -28,7 +28,14 @@
                         <p class="help-block">These formats are supported: csv</p>
                         <div class="help-block">
                             Your data must conform to this schema to be accepted :
-                            <div class="help-block-schema">latitude(float), longitude(float), species_name(string), location_site(string), notes(string), present(int), absent(int), category(string), date(yyyy-mm-dd), collector(string)</div>
+                            <div class="help-block-schema">
+                                latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string)
+                            </div>
+                            <div class="help-block-space"></div>
+                            And these are optional fields :
+                            <div class="help-block-schema">
+                                present(int), absent(int)
+                            </div>
                         </div>
                         <div class="help-block-space"></div>
                         <div class="help-block">
