add location filtered when search

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -38,6 +38,8 @@
             <button type="button"><i class="fa fa-globe"></i></button>
             <div id="mouse-position-wrapper" style="display: none"></div>
         </div>
+        <div class="ol-control" id="taxon-filter">ssss
+        </div>
         <div id="popup"></div>
     </script>
 
