--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-lg-12" style="padding-right: 0">
                     <span class="title">
-                        LAYERS SELECTOR
+                        LAYER SELECTOR
                     </span>
                     <div class="layers-selector-container-close close-button pull-right">
                         X
