--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -41,7 +41,7 @@
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
                         <div class="bims-nav-footer row">
-                            <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY KARTOZA</div>
+                            <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
                         </div>
                     </ul>
             </li>
@@ -70,7 +70,7 @@
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/signup/">SIGN UP</a></li>
                      {% endif %}
                     <div class="bims-nav-footer row">
-                        <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY KARTOZA</div>
+                        <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
                     </div>
                     </ul>
             </li>
