--- a/bims/templates/tracking/dashboard.html
+++ b/bims/templates/tracking/dashboard.html
@@ -1,4 +1,4 @@
-
+{% load static from staticfiles %}
 <html>
     <style>
          #dashboard {
@@ -6,14 +6,27 @@
             padding-bottom: 5%;
         }
 
+        .button, button, input[type="button"], input[type="reset"], input[type="submit"] {
+            background-color: #9b4dca;
+            border: 0.1rem solid #9b4dca;
+            border-radius: .4rem;
+            color: #526B43 !important;
+
+            background-color: white !important;
+            color: #526B43 !important;
+            border: 0.1rem solid #526B43 !important;
+        }
+
     </style>
         <body>
         <div class="container" id="dashboard">
         <div class="row">
             <div class="col-lg-12">
-                <div class="page-header text-center"><h1>Dashboard</h1></div>
+                <div class="page-header
+                text-center"><h1><b>Dashboard</b></h1></div>
             </div>
         </div>
+        <div class="row">
             <div class="col-lg-6">
                 <div id="tracking-filters">
                     <form method="GET">
@@ -37,6 +50,24 @@
                     {% include "tracking/snippets/stats.html" %}
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="header text-center"><h2>Visualised
+                    statistics</h2></div>
+
+                <canvas id="myChart" width="500" height="400"></canvas>
+
+                <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+                <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
+                <script type="text/javascript">
+                    {#$.get('{% url "line_chart_json" %}', function(data) {#}
+                        var ctx = $("#myChart").get(0).getContext("2d");
+                        new Chart(ctx, {
+                            type: 'line', data: data
+                        });
+                    });
+                </script>
+            </div>
+        </div>
         </div>
     </body>
 
