fix template tag

--- a/bims/templates/contributions.html
+++ b/bims/templates/contributions.html
@@ -22,7 +22,7 @@
         </span>
     </div>
     <div class="col-lg-3 button-wrapper">
-        <button><a href="{% url 'under-development' %}">ADD CONTRIBUTION</a></button>
+        <button><a href="/upload/">ADD CONTRIBUTION</a></button>
     </div>
     </div>
 
