--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -12,6 +12,7 @@
     <link href="{% static "css/map.css" %}" rel="stylesheet">
     <link href="{% static "css/loading.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/ol-layerswitcher/ol3-layerswitcher.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/openlayers-4.6.4/ol.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
         const bingMapKey = '{{ bing_map_key }}';
@@ -41,6 +42,10 @@
         <div class="ol-control" id="taxon-filter">ssss
         </div>
         <div id="popup"></div>
+        <div id="map-legend-wrapper" class="control-drop-shadow hide-legend">
+            <div id="map-legend-symbol">L</div>
+            <div id="map-legend"></div>
+        </div>
     </script>
 
     <script type='text/html' id='side-panel-template'>
