fix date filter

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -847,3 +847,8 @@ div:hover::-webkit-scrollbar {
 .noUi-handle:before, .noUi-handle:after {
     display: none !important;
 }
+
+.button-filter-wrapper {
+    text-align: center;
+    padding: 5px 40px;
+}
