--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -22,6 +22,7 @@
         const geocontextUrl = '{{ geocontext_url }}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
         const centerPointMap = '{{ center_point_map }}';
+        const listCategoryAPIUrl = '{% url "list-date-category" %}';
     </script>
 {% endblock %}
 
@@ -126,8 +127,8 @@
                     <div>MONTH</div>
                     <table id="month-selector" style="width:100%">
                     </table>
-                    <button id="apply-filter">Apply Filter</button>
-                    <button id="clear-filter">Clear Filter</button>
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="apply-filter">Clear Filter</button>
                 </div>
             </div>
             <div class="row sub-filter">
@@ -138,6 +139,10 @@
             <div class="row" style="display: none">
                 <div class="col-lg-12 filter-content" id="filter-collectors">
                 </div>
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="apply-filter">Clear Filter</button>
+                </div>
             </div>
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
@@ -145,9 +150,11 @@
                 </div>
             </div>
             <div class="row" style="display: none">
-                <div class="col-lg-12 filter-content">
-                    <input type="checkbox" name="category-value" value="indigenous"> Indigenous<br>
-                    <input type="checkbox" name="category-value" value="invasive"> Invasive<br>
+                <div class="col-lg-12 filter-content" id="filter-category">
+                </div>
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="apply-filter">Clear Filter</button>
                 </div>
             </div>
         </div>
