add model to hold non biodiversity list

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -21,6 +21,7 @@
         const geocontextUrl = '{{ geocontext_url }}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
         const centerPointMap = '{{ center_point_map }}';
+        const listNonBiodiversityLayerAPIUrl = '{% url "list-non-biodiversity-layer" %}';
     </script>
 {% endblock %}
 
