--- a/bims/templates/fish_csv_uploader.html
+++ b/bims/templates/fish_csv_uploader.html
@@ -1,109 +1,5 @@
-{% extends 'main_base.html' %}
-{% load static from staticfiles %}
+{% extends 'csv_uploader.html' %}
 
-{% block title %}
-    Uploader
-{% endblock %}
-
-{% block head %}
-
-    <!-- Custom styles for this template -->
-    <link href="{% static "css/csv_uploader.css" %}" rel="stylesheet">
-
-{% endblock %}
-
-{% block body_content %}
-
-    <div class="loading">Loading&#8230;</div>
-    <div class="container">
-        <div class="jumbotron csv-uploader-wrapper">
-            <h3>This is the page for uploading fish observation records</h3>
-            <div id="csv-alert" class="alert alert-warning" role="alert" style="display: none;">
-            </div>
-                <div class="modal-body">
-                    <form id="upload-form" onchange="Validate(this)" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                        <label for="file"><b>Upload file here</b></label>
-                        <input type="file" name="csv_file">
-                        <p class="help-block">These formats are supported: csv</p>
-                        <div class="help-block">
-                            Your data must conform to this schema to be accepted :
-                            <div class="help-block-schema">
-                                latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string), habitat(string)
-                            </div>
-                            <div class="help-block-space"></div>
-                            And these are optional fields :
-                            <div class="help-block-schema">
-                                present(int), absent(int)
-                            </div>
-                        </div>
-                        <div class="help-block-space"></div>
-                        <div class="help-block">
-                            Duplicates will be detected and rejected.
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button id="upload-file-btn" class="btn btn-primary" data-dismiss="modal" value="Upload">Upload</button>
-                </div>
-
-            {% if data.uploaded %}
-                <p> {{ data.uploaded }} </p>
-            {% endif %}
-
-
-        </div>
-    </div>
-
-{% endblock %}
-
-{% block foot %}
-
-    <!-- Plugin JavaScript -->
-    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/libs/jquery-easing/jquery.easing.min.js" %}"></script>
-    <script src="{% static "js/libs/scrollreveal/scrollreveal.min.js" %}"></script>
-    <script src="{% static "js/libs/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
-
-    <script type="text/javascript">
-        var _validFileExtensions = [".csv"];
-
-        $('#upload-file-btn').click(function (e) {
-            $('.loading').show();
-            $('#upload-form').submit();
-        });
-
-        function Validate(oForm) {
-            var arrInputs = oForm.getElementsByTagName("input");
-            var alertDiv = $('#csv-alert');
-            alertDiv.hide();
-            for (var i = 0; i < arrInputs.length; i++) {
-                var oInput = arrInputs[i];
-                if (oInput.type == "file") {
-                    var sFileName = oInput.value;
-                    if (sFileName.length > 0) {
-                        var blnValid = false;
-                        for (var j = 0; j < _validFileExtensions.length; j++) {
-                            var sCurExtension = _validFileExtensions[j];
-                            if (sFileName.substr(sFileName.length - sCurExtension.length, sCurExtension.length).toLowerCase() == sCurExtension.toLowerCase()) {
-                                blnValid = true;
-                                break;
-                            }
-                        }
-
-                        if (!blnValid) {
-                            alertDiv.html("Sorry, " + sFileName + " is invalid, allowed extensions are: " + _validFileExtensions.join(", "));
-                            alertDiv.show();
-                            oInput.value = '';
-                            return false;
-                        }
-                    }
-                }
-            }
-            return true;
-        }
-
-    </script>
-
-{% endblock %}
+{% block module_name %} fish {% endblock %}
+{% block required_fields %} latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string), habitat(string) {% endblock %}
+{% block optional_fields%} present(int), absent(int) {% endblock %}
