--- a/bims/templates/carousel.html
+++ b/bims/templates/carousel.html
@@ -15,7 +15,7 @@
                 <div class="carousel-title">
                     {{ header.description }}
                 </div>
-                <img class="d-block w-100" src="media/{{ header.file }}" alt="slide">
+                <img class="d-block w-100" src="uploaded/{{ header.file }}" alt="slide">
             </div>
         {% endfor %}
     </div>
