--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -125,22 +125,22 @@ header.masthead p {
     position: absolute;
     width: 100%;
     height: 400px;
+    top: 0;
 }
 
 .title-header-buttons {
-    height: 100%;
+    text-align: center;
+    position: absolute;
     width: 100%;
-}
-
-.title-header-buttons .btn {
-    margin-top: 250px;
+    bottom: 100px;
 }
 
 #carouselIndicators {
     width: 100%;
-    position: relative;
+    position: absolute;
     height: 400px;
     overflow-y: hidden;
+    top: 0;
 }
 
 .carousel-indicators li {
@@ -153,7 +153,7 @@ header.masthead p {
 .chart-icon-wrapper {
     position: relative;
     width: 200px;
-    height: 200px;
+    height: 250px;
     margin: 0 auto;
 }
 
