--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -61,7 +61,7 @@
         </div>
       </div>
     </section>
-    </div>
+
 
     <section id="about">
     <div class="container">
@@ -79,11 +79,13 @@
         </div>
     </div>
     </section>
+    </div>
 {% endblock %}
 
 {% block foot %}
 
     <!-- Plugin JavaScript -->
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/libs/chart/Chart-2.7.2.js" %}"></script>
     <script src="{% static "js/views/donut-chart.js" %}"></script>
