--- a/bims/templates/shapefile_uploader.html
+++ b/bims/templates/shapefile_uploader.html
@@ -17,7 +17,7 @@
     <div class="loading">Loading&#8230;</div>
     <div class="container">
         <div class="jumbotron csv-uploader-wrapper">
-            <h3>This is the page for uploading {% block module_name %}generic{% endblock %} observation records</h3>
+            <h3>This is the page for uploading shapefiles for {% block module_name %}generic{% endblock %} observation records</h3>
             <div id="csv-alert" class="alert alert-warning" role="alert" style="display: none;">
             </div>
 
@@ -37,11 +37,18 @@
                             present(int), absent(int)
                         {% endblock %}
                     </div>
+
                 </div>
                 <div class="help-block-space"></div>
                 <div class="help-block">
                     Duplicates will be detected and rejected.
                 </div>
+
+                <div class="help-block-space"></div>
+                <div class="help-block">
+                   You need to upload .shp, .shx, and .dbf  &nbsp;files together
+                </div>
+
                 <div class="help-block-space"></div>
 
                 <label for="file"><b>Upload shapefile here</b></label>
@@ -90,8 +97,13 @@
     <script src="{% static "js/libs/jquery-fileupload/vendor/jquery.ui.widget.js" %}"></script>
     <script src="{% static "js/libs/jquery-fileupload/jquery.iframe-transport.js" %}"></script>
     <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload-process.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload-validate.js" %}"></script>
+
     <script type="text/javascript">
         var csrfmiddlewaretoken = '{{ csrf_token }}';
+
+        var processShapefileUrl = {% block process_shapefile_url %}'/process_shapefiles/'{% endblock %};
     </script>
     <script src="{% static "js/shapefile-upload.js" %}"></script>
 
