Show reupload button

--- a/bims/templates/shapefile_uploader.html
+++ b/bims/templates/shapefile_uploader.html
@@ -85,6 +85,10 @@
                 Processing shapefiles...
             </div>
 
+            <div class="reupload">
+                <button class="btn btn-primary" id="reupload-button">Upload another files</button>
+            </div>
+
         </div>
     </div>
 
