--- a/bims/static/css/csv_uploader.css
+++ b/bims/static/css/csv_uploader.css
@@ -138,3 +138,11 @@ body {
   padding: 10px;
   font-style: italic;
 }
+
+.reupload {
+  text-align: center;
+}
+
+#reupload-button:hover {
+  cursor: pointer;
+}
