add management to heading

--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -34,7 +34,8 @@
                         <div class="close-dropdown"><i class="fa fa-close"></i></div>
                         <div class="bims-title row">
                             <div class="bims-title-big col-lg-6">BIMS</div>
-                            <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION SYSTEM</div>
+                            <div class="bims-title-acc
+                            col-lg-6">BIODIVERSITY <br/>INFORMATION MANAGEMENT SYSTEM</div>
                         </div>
                         <li><a class="nav-link js-scroll-trigger" href="/">HOME</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/map">MAP</a></li>
@@ -61,7 +62,7 @@
                     <div class="close-dropdown"><i class="fa fa-close"></i></div>
                     <div class="bims-title row">
                         <div class="bims-title-big col-lg-6">BIMS</div>
-                        <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION SYSTEM</div>
+                        <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION MANAGEMENT SYSTEM</div>
                     </div>
                      {% if user.is_authenticated %}
                         <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
