--- a/bims/static/css/non_validated_list.css
+++ b/bims/static/css/non_validated_list.css
@@ -24,3 +24,12 @@ th {
 .validate-action:hover {
     color: #1b900d;
 }
+
+.site-link {
+    color: cadetblue !important;
+    cursor: pointer;
+}
+
+.site-link:hover {
+    text-decoration: underline !important;
+}
