--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <div class="col-lg-2 pull-right about-links">
-                <p><a>About</a></p>
+                <p><a href="/pages/aboutus/" style="text-decoration: none; color: white">About</a></p>
                 <p><a href="/contact/" style="text-decoration: none; color: white">Contact</a></p>
                 <p><a>Others</a></p>
             </div>
