--- a/bims/templates/flatpages/default.html
+++ b/bims/templates/flatpages/default.html
@@ -15,7 +15,7 @@
         <div style="padding-top: 6%;">
           <div class="container" style="margin-bottom: 25px">
                 <div class="row">
-                  <div class="col-lg-8 mx-auto text-center">
+                  <div class="col-lg-6 col-md-6 col-xm-6 mx-auto text-center">
                     <h2 class="section-heading">{{ flatpage.title }}</h2>
                   </div>
                 </div>
