--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -116,7 +116,7 @@ html, body, .map, .map-wrapper, #map-container {
     background-color: white;
     position: absolute;
     left: 0;
-    top: 139px;
+    top: 165px;
     transform: translateY(-50%);
     padding-left: 6px;
     padding-right: 6px;
@@ -270,6 +270,37 @@ html, body, .map, .map-wrapper, #map-container {
     margin-top: 3px;
 }
 
+.locate-options-container {
+    display: none;
+    padding-bottom: 0 !important;
+}
+
+#locate-options {
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+#locate-options li {
+    text-align: left;
+    background: none;
+    color: black;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+#locate-options li:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.locate-options-container .content {
+    border-top: 1px solid darkgray;
+    margin-top: 3px;
+}
 .map-control-panel-box .title {
     font-size: 16pt;
     line-height: 20px;
@@ -468,7 +499,7 @@ html, body, .map, .map-wrapper, #map-container {
 
 .layer-switcher {
     position: absolute;
-    top: 190px !important;
+    top: 236px !important;
     left: 0;
     right: auto !important;
     text-align: left;
