--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -169,6 +169,9 @@
             <div class="filter-control sub-control-panel">
                 <i class="fa fa-map" aria-hidden="true"></i>
             </div>
+            <div class="locate-control sub-control-panel">
+                <i class="fa fa-location-arrow" aria-hidden="true"></i>
+            </div>
         </div>
         <div class="zoom-control row">
             <div class="col-lg-6 sub-zoom-control zoom-out"><i class="fa fa-plus" aria-hidden="true"></i></div>
@@ -189,6 +192,23 @@
             </div>
             <div class="row content">
                 <ul id="layers-selector" style="width:100%">
+                </ul>
+            </div>
+        </div>
+        {# locate option container #}
+        <div class="locate-options-container map-control-panel-box">
+            <div class="row">
+                <div class="col-lg-12" style="padding-right: 0">
+                    <span class="title">
+                        LOCATE OPTIONS
+                    </span>
+                    <div class="locate-options-container-close close-button pull-right">
+                        X
+                    </div>
+                </div>
+            </div>
+            <div class="row content">
+                <ul id="locate-options" style="width:100%">
                 </ul>
             </div>
         </div>
