--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -39,7 +39,7 @@
                         </div>
                         <li><a class="nav-link js-scroll-trigger" href="/">HOME</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/map">MAP</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">EXTERNAL RESOURCES</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
@@ -67,8 +67,11 @@
                      {% if user.is_authenticated %}
                         <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
                          <li><a class="nav-link js-scroll-trigger" id="navbar-contributions" href="/under-development/">CONTRIBUTIONS</a></li>
-                         <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/upload/">UPLOAD FILES</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
+                         <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/upload/">UPLOAD DATA</a></li>
+                         {% if user.is_staff or user.is_superuser %}
+                            <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/admin/">ADMINISTRATION</a></li>
+                         {% endif %}
+                             <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
                      {% else %}
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/"><i class="fa fa-sign-in"></i> LOGIN</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/signup/">SIGN UP</a></li>
