--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -14,6 +14,7 @@
 
 {% block body_content %}
 <div id="section-wrapper">
+    <div id="header-wrapper">
     <header class="masthead text-center text-white d-flex" id="header">
         {% include "carousel.html" %}
     </header>
@@ -61,7 +62,7 @@
         </div>
       </div>
     </section>
-
+    </div>
 
     <section id="about">
     <div class="container">
